--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ body{
 	color: white;
 	text-shadow: 12px 12px 10px grey;
 	box-shadow: 10px 10px 20px grey;
+	height: 70px;
 }
 
 .col-md-8 {
@@ -83,11 +84,12 @@ p {
 .bottom {
 	background-color: #666666;
 	color: darkgrey;
-	font-size: .75em;
+	font-size: .90em;
 	font-weight: bold;
 	padding: 30px 0;
 	text-align: center;
 	border-top: 5px solid #4aaaa5;
+	box-shadow: 0px -10px 20px #666666;
 }	
 
 footer {
