--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,18 @@ p {
 	height: 60px;
 }
 
+.port-label {
+	width: 100%;
+	padding: 10px 0;
+	color: #ffffff;
+	background-color: #4aaaa5;
+	font-family: 'Kavivanar', cursive;
+	text-shadow: 2px 2px dimgrey;
+	text-align: center;
+	position: absolute;
+	bottom: 20px;
+}
+
 .bottom {
 	background-color: #666666;
 	color: darkgrey;
