--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ body{
 
 .col-md-8 {
 	background-color: white;
-	margin-top: 50px;
+	margin-top: 30px;
 	border: 1px solid #cccccc;
 	width: 640px;
 	margin-right: 0;
@@ -61,7 +61,7 @@ p {
 }
 
 .panel {
-	margin-top: 50px;
+	margin-top: 30px;
 	text-shadow: 12px 12px 6px gainsboro;
 	box-shadow: 10px 10px 20px grey;
 	width: 270px;
@@ -92,6 +92,26 @@ p {
 	text-align: center;
 	position: absolute;
 	bottom: 20px;
+}
+
+.portleft-img {
+	width: 270px;
+	height: 200px;
+	box-shadow: 10px 10px 20px grey;
+	float: left;
+	position: relative;
+	margin-left: 30px;
+	margin-bottom: 20px;
+}
+
+.portright-img {
+	width: 270px;
+	height: 200px;
+	box-shadow: 10px 10px 20px grey;
+	float: right;
+	position: relative;
+	margin-right: 30px;
+	margin-bottom: 20px;
 }
 
 .bottom {
