--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,19 @@ body{
 	margin-right: 0;
 	margin-left: 0;
 	overflow: auto;
+	padding-bottom: 80px;
+}
+
+.port-label {
+	/*width: 100%;*/
+	padding: 10px 0;
+	color: #ffffff;
+	background-color: #4aaaa5;
+	font-family: 'Kavivanar', cursive;
+	text-shadow: 2px 2px dimgrey;
+	text-align: center;
+	position: absolute;
+	bottom: 20px;
 }
 
 h1 {
@@ -130,4 +143,33 @@ footer {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
+	height: 50px;
+}
+
+.fields {
+	background-color: #ffffff;
+	padding-top: 20px;
+}
+
+input {
+	width: 600px;
+	padding: 5px 0 5px 10px;
+	font-size: 16px;
+}
+
+textarea {
+	width: 600px;
+	height: 150px;
+	padding: 10px 0 10px 10px;
+	font-family: 'Kavivanar', cursive;
+	font-size: 16px;
+}
+
+input[type=submit] {
+	width: 150px;
+	background-color: #4aaaa5;
+	color: #ffffff;
+	font-size: 18px;
+	border: none;
+	box-shadow: 10px 10px 20px grey;
 }
